Cors update